Add javadoc plugin